<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultatActivity">

    <TextView
        android:id="@+id/lblTitre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_secondary"
        android:paddingVertical="12dp"
        android:text="@string/apercu"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Vol -->
    <TextView
        android:id="@+id/lblVol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/cout_vol"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTitre" />

    <TextView
        android:id="@+id/txtVol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/lblVol"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="1 200,00 $" />

    <!-- Hébergement -->
    <TextView
        android:id="@+id/lblHebergement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="26dp"
        android:text="@string/hebergement"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblVol" />

    <TextView
        android:id="@+id/txtHebergement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/lblHebergement"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="850,00 $" />

    <!-- Restaurant -->
    <TextView
        android:id="@+id/lblRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="26dp"
        android:text="@string/restaurant"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblHebergement" />

    <TextView
        android:id="@+id/txtRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/lblRestaurant"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="400,00 $" />

    <!-- séparateur -->
    <View
        android:id="@+id/separateur"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblRestaurant" />

    <!-- Total -->
    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/total"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separateur" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/lblTotal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="2 450,00 $" />

    <!-- Taux -->
    <TextView
        android:id="@+id/lblTaux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="26dp"
        android:text="@string/taux"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTotal" />

    <TextView
        android:id="@+id/txtTaux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/lblTaux"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="10,0 %" />

    <!-- Contribution -->
    <TextView
        android:id="@+id/lblContribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/contribution"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTaux" />

    <TextView
        android:id="@+id/txtContribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/lblContribution"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="245,00 $" />

    <!-- boutons -->

    <Button
        android:id="@+id/btnModifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:onClick="onModifier"
        android:text="@string/modifier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblContribution" />

    <Button
        android:id="@+id/btnConfirmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:onClick="onConfirmer"
        android:text="@string/confirmer"
        app:layout_constraintBaseline_toBaselineOf="@id/btnModifier"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>